--- a/springmvc/src/main/resources/templates/home.html
+++ b/springmvc/src/main/resources/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <title>Admin portal</title>
 </head>
 <body>
